app/assets/stylesheets/application.scss
/*
 *= require_self
 *= require_tree .
 */

// Danger (pale red)
$bgnd-danger:          hsla(2, 64.4860%, 58.0392%, 1);
$border-danger:        hsla(2, 64.1667%, 52.9412%, 1);
$bgnd-danger-hover:    hsla(2, 64.7059%, 50%,      1);
$border-danger-hover:  hsla(2, 64.5933%, 40.9804%, 1);
$text-danger:          hsla(1, 44.6640%, 50.3922%, 1);

// Warning (pale orange)
$bgnd-warning:         hsla(35, 84.3750%, 62.3529%, 1);
$border-warning:       hsla(35, 84.4037%, 57.2549%, 1);
$bgnd-warning-hover:   hsla(35, 84.5494%, 54.3137%, 1);
$border-warning-hover: hsla(35, 84.4156%, 45.2941%, 1);
$text-warning:         hsla(38, 46.3830%, 53.9216%, 1);

// Success (pale green)
$bgnd-success:         hsla(120, 39.3162%, 54.1176%, 1);
$border-success:       hsla(120, 39.2000%, 49.0196%, 1);
$bgnd-success-hover:   hsla(120, 39.5745%, 46.0784%, 1);
$border-success-hover: hsla(120, 39.6825%, 37.0588%, 1);
$text-success:         hsla(121, 32.0388%, 40.3922%, 1);

// Info (cyanish)
$bgnd-info:            hsla(194, 66.4975%, 61.3725%, 1);
$border-info:          hsla(194, 66.6667%, 56.4706%, 1);
$bgnd-info-hover:      hsla(194, 66.3866%, 53.3333%, 1);
$border-info-hover:    hsla(194, 66.3717%, 44.3137%, 1);
$text-info:            hsla(200, 49.7835%, 45.2941%, 1);

// Primary (blue)
$bgnd-primary:         hsla(208, 56.1983%, 52.5490%, 1);
$border-primary:       hsla(208, 56.1983%, 47.4510%, 1);
$bgnd-primary-hover:   hsla(208, 55.9471%, 44.5098%, 1);
$border-primary-hover: hsla(208, 56.0440%, 35.6863%, 1);
$text-primary:         hsla(208, 56.1983%, 52.5490%, 1);

$bgnd-color:           hsla(0, 0.0%, 100.0%, 1);
$footer-bgnd:          hsla(0, 0.0%,  96.0%, 1);

html,
body {
  height: 100%;
  background-color: $bgnd-color;
}

.noty_text {
  font-size: 18px;
  font-weight: normal;
}

#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin: 0 auto -60px; /* Negative indent footer by its height */
  padding: 0 0 60px;    /* Pad bottom by footer height */
}

.logout-link {
  margin-top: 8px;
}

h1 {
  margin: 0;
  padding: 0;
}

.name-field {
  float: left;
  margin-left: 1%;
  margin-right: 0;
}

.name-prefix {
  margin-left: 0;
  width: 13%;
}

.name-given { width: 25%; }

.name-middle { width: 11%; }

.name-family { width: 34%; }

.name-suffix { width: 13%; }

#pw-quality {
  font-size: 1.1em;
}

.crack-div {
  font-size: 1.2em;
  margin-top: -10px;
}

.match-div {
  font-size: 1.2em;
  margin-top: 20px;
  color: red;
}

.match-div.pmatch {
  font-weight: bold;
  color: $bgnd-success;
}

legend {
  text-align: left;
  font-size: 130%;
  line-height: 1.5;
  color: $bgnd-success;
  border-bottom: 1px solid $bgnd-success;
}

.main {
  padding-top: 80px;
}

footer {
  height: 60px;
  background-color: $footer-bgnd;
}

.container .credit {
  text-align: right;
  margin: 20px 0;
}

footer > .container {
  padding-left: 15px;
  padding-right: 15px;
}

header {
  .navbar-right {
    margin-left: 10px;
  }
}

// profile page

.profile_text{
  font-size: 40px;
  margin-bottom: 20px;
}

.role{
  font-size: 40px;
}

.button{
  margin-top: 10px;
}


.star_rating {
  margin-top: 10px;
  font-size: 33px;
}

// LOGIN PAGES

.login-fieldset {
  .btn {
    float: left;
    min-width: 7em;
    margin: 0px 10px 0px 0px;
  }
}

#register-ma-btn-group {
  .btn {
    margin: 0px 10px 0px 0px;
    border-radius: 6px;
  }
}

// SEARCH PAGE
@import "http://fonts.googleapis.com/css?family=Roboto:300,400,500,700";

.container {
  margin-top: 20px;
}

.mb20 {
  margin-bottom: 20px;
}

hgroup {
  padding-left: 15px; border-bottom: 1px solid #ccc;
}

hgroup h1 {
  font: 500 normal 1.625em "Roboto",Arial,Verdana,sans-serif;
  color: #2a3644;
  margin-top: 0;
  line-height: 1.15;
}

hgroup h2.lead {
  font: normal normal 1.125em "Roboto",Arial,Verdana,sans-serif;
  color: #2a3644;
  margin: 0;
  padding-bottom: 10px;
}

.search-result .thumbnail {
  border-radius: 0 !important;
}

.search-result:first-child {
  margin-top: 0 !important;
}

.search-result {
  margin-top: 20px;
}

.search-result .col-md-2 {
  border-right: 1px dotted #ccc;
  min-height: 140px;
}

.search-result ul {
  padding-left: 0 !important;
  list-style: none;
}

.search-result ul li {
  font: 400 normal .85em "Roboto",Arial,Verdana,sans-serif;
  line-height: 30px;
}

.search-result .col-md-7 {
  position: relative;
}

.search-result h3 {
  font: 500 normal 1.375em "Roboto",Arial,Verdana,sans-serif;
  margin-top: 0 !important;
  margin-bottom: 10px !important;
}

.search-result h3 > a, .search-result i {
  color: #248dc1 !important;
}
.search-result p {
  font: normal normal 1.125em "Roboto",Arial,Verdana,sans-serif;
}

.search-result span.border {
  display: block; width: 97%;
  margin: 0 15px;
  border-bottom: 1px dotted #ccc;
}

.skills-container li:last-child .list-comma{
    display: none;
}

li.list-comma {
  list-style-type: none;
  float: left;
}

// conversation message

#conversation-panel {
  max-height: 600px;
  min-height: 600px;
  overflow: auto;

  .panel-body{
    padding: 5px;
    padding-left: 10px;

  }

  .conversation {
    border-bottom: 2px solid rgba(0,0,0,.075);
    padding-bottom: 10px;

  }

  h3{
    font-size: 18px;
    margin-top: 10px;
    text-align: center;

  }

  img{
    margin-right: 10px;

  }
}

#message-panel {
  height: 400px;
  overflow: auto;

  .panel-body {
    padding: 5px;
    padding-left: 10px;

  }

  .message {
    border-bottom: 2px solid rgba(0,0,0,.075);
    padding-top: 10px;
    padding-bottom: 10px;

  }

  h3{
    font-size: 18px;

  }

  img{
    margin-right: 10px;

  }
}

.form-control{
  margin-bottom: 10px;
}

